// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Bookmark renders bookmark not selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-3"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-6"
  >
    <span
      className="MuiButtonBase-root-25 MuiIconButton-root-19 MuiSwitchBase-root-15 MuiSwitch-switchBase-9 MuiSwitch-colorPrimary-11 Bookmark-colorPrimary-2"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-24"
      >
        <span
          className="MuiSwitch-icon-7"
        />
        <input
          checked={false}
          className="MuiSwitchBase-input-18"
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-28"
      />
    </span>
    <span
      className="MuiSwitch-bar-14"
    />
  </span>
  <span
    className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-5 Bookmark-label-1"
  >
    Bookmark
  </span>
</label>
`;

exports[`Tests for Bookmark renders bookmark selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-3"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-6"
  >
    <span
      className="MuiButtonBase-root-25 MuiIconButton-root-19 MuiSwitchBase-root-15 MuiSwitch-switchBase-9 MuiSwitch-colorPrimary-11 Bookmark-colorPrimary-2 MuiSwitchBase-checked-16 MuiSwitch-checked-10"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-24"
      >
        <span
          className="MuiSwitch-icon-7 MuiSwitch-iconChecked-8"
        />
        <input
          checked={true}
          className="MuiSwitchBase-input-18"
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-28"
      />
    </span>
    <span
      className="MuiSwitch-bar-14"
    />
  </span>
  <span
    className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-5 Bookmark-label-1"
  >
    Bookmark
  </span>
</label>
`;
